AC_INIT([lights], 1.0)
AM_INIT_AUTOMAKE
AC_PROG_CXX
AC_PROG_CC
AC_HEADER_STDC
AC_HEADER_TIME
AC_CHECK_HEADER([fcntl.h])
AC_CHECK_HEADER([unistd.h])
AC_CHECK_HEADER([sys/mman.h])
AC_CHECK_HEADER([sys/types.h])
AC_CHECK_HEADER([sys/stat.h])
AC_CHECK_HEADER([sys/utsname.h])
AC_OUTPUT([Makefile src/Makefile])
